src/test/deca/codegen/valid/tests/methodCall.deca
// Description:
//   test d'appel de méthode
//
// Resultats:
//      31


class ClassName {
    int x = 3;
    int y;
    int methodAddition(int nb1, int nb2, int nb3, int nb4) {
        return nb1 + nb2 + nb3 + nb4; // 3 + 7 + 1 + 20 = 31
    }
}

{
    ClassName a = new ClassName();

    a.y = a.x + 4; // 7
    int z = 1;

    println(a.methodAddition(a.x, a.y, z, 20));
}
