src/test/deca/codegen/invalid/tests/no_return.deca
// Description:
//   test d'appel de méthode
//
// Resultats:
//      31


class ClassName {
    int x = 3;
    int y;
    int methodAddition(int nb1, int nb2, int nb3, int nb4) {
        nb1 = nb2 + nb3 + nb4;
    }
}

{
    ClassName a = new ClassName();

    a.y = a.x + 4; // 7
    int z = 1;

    println(methodAddition(a.x, a.y, z, 20));
}
